syntax = "proto3";

package orchestrator;

option go_package = "github.com/saykoooo/calc_go/proto";

service Orchestrator {
  // Агент запрашивает задачу у оркестратора
  rpc GetTask (GetTaskRequest) returns (TaskResponse);

  // Агент отправляет результат вычисления
  rpc SubmitResult (ResultRequest) returns (SubmitResultResponse);
}

message GetTaskRequest {}

message TaskResponse {
  string id = 1;
  double arg1 = 2;
  double arg2 = 3;
  string operation = 4;
  int32 operation_time = 5;
}

message ResultRequest {
  string id = 1;
  double result = 2;
}

message SubmitResultResponse {}
